--- a/views/center_collection.html
+++ b/views/center_collection.html
@@ -118,10 +118,17 @@
               {% include "widget2/bottom_comment/bottom_comment_zhuanlan_zhuye.html" %}
                 {% endfor %}
             </div>
-            <div class="loadMore" data-page="1" data-uid="{{userinfo.uid}}">
+            {% if collection_data.totalpage == 1  %}
+            <div class="loadMore" data-page="1" data-all="{{collection_data.totalpage}}" data-uid="{{userinfo.uid}}">
+                <span>已展示全部收藏</span>
+                {# <i class="iconfont">&#xe60b;</i> #}
+            </div>
+            {% else %}
+            <div class="loadMore" data-page="1" data-all="{{collection_data.totalpage}}" data-uid="{{userinfo.uid}}">
                 <span>加载更多</span>
                 <i class="iconfont">&#xe60b;</i>
             </div>
+            {% endif %}
             {% else %}
             {% include "widget2/blank/blank.html" %}
             {% endif %}
@@ -328,12 +335,19 @@
         }
 
         var page = 1;
+        var listpage = 1;
         $('.loadMore').on('click', function () {
             page = page + 1;
             console.log('page',page);
+            console.log('listpage',listpage);
             var uid = $(this).data('uid');
+            var all = $(this).data('all');
             var per_page = 4;
             var thisObj = $(this);
+            if (all == 1 || all == listpage) {
+                thisObj.html('已展示全部收藏');
+                return false;
+            }
             $.ajax({
                 url: '/soapi/favList',
                 type: 'GET',
@@ -344,13 +358,19 @@
                     per_page: per_page
                 },
                 success: function (revmsg) {
+                    console.log(revmsg)
                     if (revmsg.code == 0) {
                         var revList = revmsg.data.list;
                         var len = revList.length;
-                        if (len == 0) {
+                        listpage = revmsg.data.page;
+                        if (len == 0 ) {
                             thisObj.html('已展示全部收藏');
                         }
-                        if (len < per_page) {
+                        else if (all == listpage) {
+                            thisObj.html('已展示全部收藏');
+                            appendFav(revList);
+                        }
+                        else if (0 < len && len < per_page) {
                             thisObj.html('已展示全部收藏');
                             appendFav(revList);
 //                            thisObj.data('page', page);
@@ -368,6 +388,7 @@
                     console.log(errorThrown)
                 }
             })
+            
         });
         $('.report-btn').on("click",report); //点击举报
         $('.share-btn').on('click',share); //点击分享
