--- a/views/widget/new_slide_yimin/new_slide3.html
+++ b/views/widget/new_slide_yimin/new_slide3.html
@@ -8,7 +8,7 @@
       <div class="quick_links_panel">
         <ul>
 
-          <li class="on zixun message_list current" id="zxzx" style="background: #c13232;"  {% if user.uid !== login_info.uid %} onclick="openchat_new('{{ user.job_number}}')" {% endif %}>
+          <li class="on zixun message_list current" id="zxzx" style="background: #c13232;"  {% if user.uid !== login_info.uid  and user.status!=1 %} onclick="openchat_new('{{ user.job_number}}')" {% endif %}>
 
             <img src="{{helper.cdnhost}}/assets/img/phone.gif" alt="立即咨询" class="quick-img">
             <span>立<br>即<br>咨<br>询</span>
