--- a/views/widget2/community_advisor/community_advisor.html
+++ b/views/widget2/community_advisor/community_advisor.html
@@ -51,8 +51,8 @@
       <p class="advisor-name">金吉列</p>
     </dd>
   </dl>
-  <div class="advisor-btn {% if login_info.uid ==advisor.uid %}advisor-btn-gray{% endif %}" style="margin-top: 10px;text-align: center;">
-    <a onclick="openchat_new('{{ advisor.job_number}}')" style="font-size: 14px;color: #fff;">立即咨询</a>
+  <div class="advisor-btn advisor-btn-gray" style="margin-top: 10px;text-align: center;">
+    <a href="javascript:void(0);" style="font-size: 14px;color: #fff;">立即咨询</a>
   </div>
 </div>
 <script>
