--- a/views/advisor_profile.html
+++ b/views/advisor_profile.html
@@ -32,7 +32,7 @@
     margin-bottom: 60px;margin-left: 50px;
   }
   .content_title_bb img{
-    width: 92px;height: 116px;background: red;float: left;margin-right: 30px;
+    width: 92px;height: 116px;background: #e4e4e4;float: left;margin-right: 30px;
   }
   .content_title_bb .con{
     font-size: 13px;color: #333;margin-bottom: 30px;
