--- a/views/widget2/article/article.html
+++ b/views/widget2/article/article.html
@@ -64,7 +64,7 @@
 {% macro adviser_show(item,helper) %}
 <div class="art-box clearfix" >
   <a target="_blank" href="{{helper.urlgen(item.uid|string)}}">
-    <div class="adviser-head" style="background:url({{helper.avaterimg(item.uid, 'small',item.user_info.status,item.user_info.version)}}) no-repeat 0 0;background-size: 50px 50px;"></div>
+    <div class="adviser-head" style="background:url({{helper.avaterimg(item.uid, 'small',item.user_info.status,item.user_info.version)}}) no-repeat 0 0;background-size: cover;"></div>
   </a>
   <div class="adviser-info" >
      <div class="adviser-info-name" style="font-size: 14px">
@@ -107,7 +107,7 @@
 {% macro article_edit(item,helper) %}
 <div class="art-box clearfix" >
   <a target="_blank" href="{{helper.urlgen(item.uid | string)}}">
-    <div class="adviser-head" style="background:url({{helper.avaterimg(item.uid, 'small',item.user_info.status,item.user_info.version)}}) no-repeat 0 0;background-size: 50px 50px;">
+    <div class="adviser-head" style="background:url({{helper.avaterimg(item.uid, 'small',item.user_info.status,item.user_info.version)}}) no-repeat 0 0;background-size: cover;">
     </div>
   </a>
   <div class="adviser-info" >
@@ -227,7 +227,7 @@
 {% macro article_fav(item,helper) %}
 <div class="art-box clearfix" >
   <a target="_blank" href="{{helper.urlgen(item.uid | string)}}">
-    <div class="adviser-head" style="background:url({{helper.avaterimg(item.uid, 'small',item.user_info.status,item.user_info.version)}}) no-repeat 0 0;background-size: 60px 76px;"></div>
+    <div class="adviser-head" style="background:url({{helper.avaterimg(item.uid, 'small',item.user_info.status,item.user_info.version)}}) no-repeat 0 0;background-size: cover;"></div>
   </a>
   <div class="adviser-info" >
     <div class="adviser-info-name" style="font-size: 14px" >
