--- a/views/center_case.html
+++ b/views/center_case.html
@@ -301,59 +301,65 @@
         '</div>';
         return html;
         }
-        
+        var listpage = 1;
+        var loadMoreFlag = true;
         $('.loadMore').on('click', function () {
+          if(loadMoreFlag){
             var page = $(this).data('page')*1+1;
-            var listpage = 1;
             var uid = $(this).data('uid');
             var all = $(this).data('all');
             var per_page = 4;
             var thisObj = $(this);
             if (all == 1 || all == listpage) {
-                thisObj.html('案例加载完毕');
-                return false;
+              thisObj.html('案例加载完毕');
+              return false;
             }
+            loadMoreFlag = false;
             $.ajax({
-                url: '/soapi/advisor_list',
-                type: 'GET',
-                datatype: 'json',
-                data: {
-                    uid: uid,
-                    type: 1,
-                    page: page,
-                    per_page: per_page,
-                    order:"add_time desc"
-                },
-                success: function (revmsg) {
-                  console.log(revmsg);
-                    if (revmsg.code == 0) {
-                        var len = revmsg.data.list.length;
-                        listpage = revmsg.data.page;
-                        if (len == 0) {
-                            thisObj.html('案例加载完毕')
-                        }
-                        else if (all == listpage) {
-                            thisObj.html('案例加载完毕');
-                            addArticle(revmsg.data.list);
-                        }
-                        else if (0 < len && len < per_page) {
-                            thisObj.html('案例加载完毕');
-                            addArticle(revmsg.data.list);
-                            thisObj.data('page', page);
-                        }
-                        else {
-                            addArticle(revmsg.data.list);
-                            thisObj.data('page', page);
-                        }
-                    }
-                    else {
-                        thisObj.html('加载更多出错了，请刷新');
-                    }
-                },
-                error:function(XMLHttpRequest, textStatus, errorThrown){
-                    console.log(errorThrown)
+              url: '/soapi/advisor_list',
+              type: 'GET',
+              datatype: 'json',
+              data: {
+                uid: uid,
+                type: 1,
+                page: page,
+                per_page: per_page,
+                order:"add_time desc"
+              },
+              success: function (revmsg) {
+                console.log(revmsg);
+                if (revmsg.code == 0) {
+                  var len = revmsg.data.list.length;
+                  listpage = revmsg.data.page;
+                  if (len == 0) {
+                    thisObj.html('案例加载完毕')
+                  }
+                  else if (all == listpage) {
+                    thisObj.html('案例加载完毕');
+                    addArticle(revmsg.data.list);
+                  }
+                  else if (0 < len && len < per_page) {
+                    thisObj.html('案例加载完毕');
+                    addArticle(revmsg.data.list);
+                    thisObj.data('page', page);
+                  }
+                  else {
+                    addArticle(revmsg.data.list);
+                    thisObj.data('page', page);
+                  }
                 }
+                else {
+                  thisObj.html('加载更多出错了，请刷新');
+                }
+                loadMoreFlag = true;
+              },
+              error:function(XMLHttpRequest, textStatus, errorThrown){
+                console.log(errorThrown)
+                loadMoreFlag = true;
+              }
             })
+          }
+
         });
         
     })
