--- a/views/index.html
+++ b/views/index.html
@@ -10,6 +10,10 @@
   .xuanze-chengshi p a:last-child{
     margin-right: 0;
   }
+  .liuxue-guoqi a:hover{
+    background: rgba(0,0,0,0.07);
+  }
+
 </style>
 </head>
 <body>
@@ -92,36 +96,37 @@
 
 </div>
 <!--留学国家-->
-<div class="nationality_guoqi_warp">
+<div class="nationality_guoqi_warp dui-box-shadow">
+  <div class="liuxue-guojia-title">
+    点击选择留学目的地
+  </div>
   <div class="nationality_guoqi">
     <div class="liuxue-guoqi">
-      <a href="#country1"><img src="{{helper.cdnhost}}/assets/img/America.png" alt="美国留学"><p>美国</p></a>
-      <a   href="#country2"><img src="{{helper.cdnhost}}/assets/img/England.png" alt="英国留学"><p>英国</p></a>
-      <a   href="#country4"><img src="{{helper.cdnhost}}/assets/img/Australia.png" alt="澳大利亚留学"><p>澳大利亚</p></a>
-      <a   href="#country3"><img src="{{helper.cdnhost}}/assets/img/Canada.png" alt="加拿大留学"><p>加拿大</p></a>
-      <a   href="#country5"><img src="{{helper.cdnhost}}/assets/img/NEW_ZEALAND.png" alt="新西兰留学"><p>新西兰</p></a>
-      <a   href="#country51"><img src="{{helper.cdnhost}}/assets/img/Japan.png" alt="日本留学"><p>日本</p></a>
-      <a   href="#country50"><img src="{{helper.cdnhost}}/assets/img/Korea.png" alt="韩国留学"><p>韩国</p></a>
-      <a  href="#country54"><img src="{{helper.cdnhost}}/assets/img/HongKong.png" alt="中国香港留学"><p>中国香港</p></a>
-      <a   href="#country100"><img src="{{helper.cdnhost}}/assets/img/Russia.png" alt="俄罗斯留学"><p>俄罗斯</p></a>
-      <a   href="#country101"><img src="{{helper.cdnhost}}/assets/img/Ukraine.png" alt="乌克兰留学"><p>乌克兰</p></a>
-      <a   href="#country108"><img src="{{helper.cdnhost}}/assets/img/eire.png" alt="爱尔兰留学"><p>爱尔兰</p></a>
-      <a style="margin-right: 0"  href="#country111"><img src="{{helper.cdnhost}}/assets/img/Italy.png" alt="意大利留学"><p>意大利</p></a>
-      <a  href="#country112"><img src="{{helper.cdnhost}}/assets/img/Spanish.png" alt="西班牙留学"><p>西班牙</p></a>
-      <a  href="#country102"><img src="{{helper.cdnhost}}/assets/img/blr.png" alt="白俄罗斯留学"><p>白俄罗斯</p></a>
-      <a  href="#country52"><img src="{{helper.cdnhost}}/assets/img/Singapore.png" alt="新加坡留学"><p>新加坡</p></a>
-      <a  href="#country53"><img src="{{helper.cdnhost}}/assets/img/malaysia.png" alt="马来西亚留学"><p>马来西亚</p></a>
-      <a  href="#country110"><img src="{{helper.cdnhost}}/assets/img/danmark.png" alt="丹麦留学"><p>丹麦</p></a>
-      <a  href="#country103"><img src="{{helper.cdnhost}}/assets/img/germany.png" alt="德国留学"><p>德国</p></a>
-      <a  href="#country104"><img src="{{helper.cdnhost}}/assets/img/France.png" alt="法国留学"><p>法国</p></a>
-      <a  href="#country105"><img src="{{helper.cdnhost}}/assets/img/Norway.png" alt="挪威留学"><p>挪威</p></a>
-      <a  href="#country106"><img src="{{helper.cdnhost}}/assets/img/Sweden.png" alt="瑞典留学"><p>瑞典</p></a>
-      <a  href="#country107"><img src="{{helper.cdnhost}}/assets/img/Finland.png" alt="芬兰留学"><p>芬兰</p></a>
-      <a  href="#country109"><img src="{{helper.cdnhost}}/assets/img/Holland.png" alt="荷兰留学"><p>荷兰</p></a>
-      <a  style="margin-right: 0" href="#country113"><img src="{{helper.cdnhost}}/assets/img/Swiss.png" alt="瑞士留学"><p>瑞士</p></a>
-    </div>
-    <div class="liuxue-guojia-title">
-      留学国家及地区
+      <!--<a class="active1" href="#country1"><img src="{{helper.cdnhost}}/assets/img/America.png" alt="美国留学"><p>美国</p></a>  -->
+      <a  href="#country1"><div class="guoqi_ios guoqi_ios1"></div><p>美国</p></a>
+      <a   href="#country2"><div class="guoqi_ios guoqi_ios2"></div><p>英国</p></a>
+      <a   href="#country4"><div class="guoqi_ios guoqi_ios3"></div><p>澳大利亚</p></a>
+      <a   href="#country3"><div class="guoqi_ios guoqi_ios4"></div><p>加拿大</p></a>
+      <a   href="#country5"><div class="guoqi_ios guoqi_ios5"></div><p>新西兰</p></a>
+      <a   href="#country51"><div class="guoqi_ios guoqi_ios6"></div><p>日本</p></a>
+      <a   href="#country50"><div class="guoqi_ios guoqi_ios7"></div><p>韩国</p></a>
+      <a  href="#country54"><div class="guoqi_ios guoqi_ios8"></div><p>中国香港</p></a>
+      <a   href="#country100"><div class="guoqi_ios guoqi_ios9"></div><p>俄罗斯</p></a>
+      <a   href="#country101"><div class="guoqi_ios guoqi_ios10"></div><p>乌克兰</p></a>
+      <a   href="#country108"><div class="guoqi_ios guoqi_ios11"></div><p>爱尔兰</p></a>
+      <a style="margin-right: 0"  href="#country111"><div class="guoqi_ios guoqi_ios12"></div><p>意大利</p></a>
+      <a  href="#country112"><div class="guoqi_ios guoqi_ios13"></div><p>西班牙</p></a>
+      <a  href="#country102"><div class="guoqi_ios guoqi_ios14"></div><p>白俄罗斯</p></a>
+      <a  href="#country52"><div class="guoqi_ios guoqi_ios15"></div><p>新加坡</p></a>
+      <a  href="#country53"><div class="guoqi_ios guoqi_ios16"></div><p>马来西亚</p></a>
+      <a  href="#country110"><div class="guoqi_ios guoqi_ios17"></div><p>丹麦</p></a>
+      <a  href="#country103"><div class="guoqi_ios guoqi_ios18"></div><p>德国</p></a>
+      <a  href="#country104"><div class="guoqi_ios guoqi_ios19"></div><p>法国</p></a>
+      <a  href="#country105"><div class="guoqi_ios guoqi_ios20"></div><p>挪威</p></a>
+      <a  href="#country106"><div class="guoqi_ios guoqi_ios21"></div><p>瑞典</p></a>
+      <a  href="#country107"><div class="guoqi_ios guoqi_ios22"></div><p>芬兰</p></a>
+      <a  href="#country109"><div class="guoqi_ios guoqi_ios23"></div><p>荷兰</p></a>
+      <a  style="margin-right: 0" href="#country113"><div class="guoqi_ios guoqi_ios24"></div><p>瑞士</p></a>
     </div>
   </div>
 </div>
@@ -423,7 +428,7 @@
           }
       });
       $(".liuxue-guoqi ").on('click','a',function () {
-          var id=$(this).attr('href')
+          var id=$(this).attr('href');
           var $scrolltop = $(id).offset().top;
           $('html,body').animate({//$('html,body')兼容问题body属于chrome
               scrollTop:$scrolltop-174
