--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -76,56 +76,145 @@
     position: fixed;
     z-index: 999;
     display: none;
+    border-top: 2px solid #c13232;
 }
 .nationality_guoqi{
     /*display: flex;*/
-    width: 1154px;
-    height: 141px;
-    border: 3px solid #c13232;
-    background: #f1f4f6;
-    padding: 0 20px;
+    width: 1112px;
+    height: 134px;
+    background: #fff;
+    padding: 0 26px;
     position: relative;
     margin: 0 auto;
+    float: left;
 }
 .liuxue-guoqi img{
-    width:46px;
-    height:30px;
-
+    /*width:34px;*/
+    /*height:28px;*/
+    margin: 5px 10px;
 }
 .liuxue-guoqi{
     width: 100%;
     height: auto;
+    font-size: 0;
 }
 .liuxue-guoqi p{
     color:#333 ;
     font-size: 12px;
     text-align: center;
-    margin-top: 5px;
+    /*margin-top: 5px;*/
 }
 .liuxue-guoqi a{
-    width: auto;
-    margin: 10px 54px 25px 0;
-    height:30px;
-    display:block;
-    float: left;
+    /*width: 54px;*/
+    margin: 5px 40px 0px 0;
+    height:60px;
     position: relative;
+    display: inline-block;
+    border:solid 1px transparent;
 }
 .liuxue-guojia-title{
-    position: absolute;
-    width: 174px;
-    height: 30px;
-    border: 3px solid #c13232;
-    border-top: 3px solid #f1f4f6;
+    width: 23px;
+    height: 114px;
     color: #c13232;
-    font-size: 16px;
+    font-size: 12px;
     text-align: center;
-    line-height: 24px;
-    /* border-radius: 15px; */
-    /*margin: 0 auto;*/
-    /*margin-top: -3px;*/
-    /*z-index: 999999;*/
-    background: #f1f4f6;
-    bottom: -36px;
-    left: 50%;
-    margin-left: -77px;
+    line-height: 13px;
+    background: #fff;
+    padding: 10px 6px;
+    border-right: 1px solid #eeeeee;
+    float: left;
+}
+.guoqi_ios{
+    width:34px;
+    height: 28px;
+    margin: 5px 10px;
+}
+.guoqi_ios1{
+    background: url("../img/guoqi_ios.png")no-repeat;
+    background-position: -62px -10px;
+}.guoqi_ios2{
+    background: url("../img/guoqi_ios.png")no-repeat;
+    background-position: -162px -10px;
+}.guoqi_ios3{
+    background: url("../img/guoqi_ios.png")no-repeat;
+    background-position: -357px -10px;
+}.guoqi_ios4{
+    background: url("../img/guoqi_ios.png")no-repeat;
+    background-position: -259px -10px;
+}.guoqi_ios5{
+    background: url("../img/guoqi_ios.png")no-repeat;
+    background-position: -454px -10px;
+}.guoqi_ios6{
+    background: url("../img/guoqi_ios.png")no-repeat;
+    background-position: -650px -10px;
+}.guoqi_ios7{
+    background: url("../img/guoqi_ios.png")no-repeat;
+    background-position: -552px -10px;
+}.guoqi_ios8{
+    background: url("../img/guoqi_ios.png")no-repeat;
+    background-position: -847px -10px;
+    /*background-position: -748px -10px;*/
+}.guoqi_ios9{
+    background: url("../img/guoqi_ios.png")no-repeat;
+    background-position: -1041px -10px;
+    /*background-position: -847px -10px;*/
+}.guoqi_ios10{
+    background: url("../img/guoqi_ios.png")no-repeat;
+    background-position: -1140px -10px;
+    /*background-position: -943px -10px;*/
+}.guoqi_ios11{
+    background: url("../img/guoqi_ios.png")no-repeat;
+    background-position: -454px -72px;
+    /*background-position: -1041px -10px;*/
+}.guoqi_ios12{
+    background: url("../img/guoqi_ios.png")no-repeat;
+    background-position: -943px -72px;
+    /*background-position: -1140px -10px;*/
+}.guoqi_ios13{
+    background: url("../img/guoqi_ios.png")no-repeat;
+    background-position: -1041px -72px;
+    /*background-position: -62px -72px;*/
+}.guoqi_ios14{
+    background: url("../img/guoqi_ios.png")no-repeat;
+    background-position: -62px -72px;
+    /*background-position: -162px -72px;*/
+}.guoqi_ios15{
+    background: url("../img/guoqi_ios.png")no-repeat;
+    background-position: -748px -10px;
+    /*background-position: -259px -72px;*/
+}.guoqi_ios16{
+    background: url("../img/guoqi_ios.png")no-repeat;
+    background-position: -943px -10px;
+    /*background-position: -357px -72px;*/
+}.guoqi_ios17{
+    background: url("../img/guoqi_ios.png")no-repeat;
+    background-position: -847px -72px;
+    /*background-position: -454px -72px;*/
+}.guoqi_ios18{
+    background: url("../img/guoqi_ios.png")no-repeat;
+    background-position: -162px -72px;
+    /*background-position: -552px -72px;*/
+}.guoqi_ios19{
+    background: url("../img/guoqi_ios.png")no-repeat;
+    background-position: -259px -72px;
+    /*background-position: -650px -72px;*/
+}.guoqi_ios20{
+    background: url("../img/guoqi_ios.png")no-repeat;
+    background-position: -357px -72px;
+    /*background-position: -748px -72px;*/
+}.guoqi_ios21{
+    background: url("../img/guoqi_ios.png")no-repeat;
+    background-position: -552px -72px;
+    /*background-position: -847px -72px;*/
+}.guoqi_ios22{
+    background: url("../img/guoqi_ios.png")no-repeat;
+    background-position: -748px -72px;
+    /*background-position: -943px -72px;*/
+}.guoqi_ios23{
+    background: url("../img/guoqi_ios.png")no-repeat;
+    background-position: -650px -72px;
+    /*background-position: -1041px -72px;*/
+}.guoqi_ios24{
+    background: url("../img/guoqi_ios.png")no-repeat;
+    background-position: -1140px -72px;
 }
