--- a/views/login/login.html
+++ b/views/login/login.html
@@ -48,9 +48,9 @@
     <div class="login_content">
       <div class="login_nei text-center loginscreen  animated fadeInDown" style="text-align: left;height: 280px;">
         <!-- <h3 class="login_nei_title">登录金吉列<a target="_blank"  href="{{helper.urlgen('register')}}">注册一个新账号</a></h3> -->
-        <div class=" clearfix" id="guwen_login" style="margin-left: -15px;font-size: 18px;">
-            <input class="wrap-con" type="radio" name="payMethod" value="1" checked="checked" id="liu"/>&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu">留学顾问</label> 
-            <input class="wrap-ing" type="radio" name="payMethod" value="2" id="yi"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="yi">移民顾问</label>
+        <div class="payMethod clearfix" id="guwen_login" style="margin-left: -15px;font-size: 18px;">
+            <input class="checked" type="radio" name="payMethod" value="1" checked="checked" id="liu"/>&nbsp;&nbsp;&nbsp;&nbsp;<label for="liu"><span><i></i></span>留学顾问</label> 
+            <input class="" type="radio" name="payMethod" value="2" id="yi"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label for="yi"><span><i></i></span>移民顾问</label>
         </div>
         <form class="m-t" role="form" style="margin-top: 20px;">
           <div class="form-group inputtext_isr" style="position: relative;height: 28px">
