添加广告位轮播

--- a/views/index.html
+++ b/views/index.html
@@ -442,4 +442,5 @@
 </body>
 <script src="{{helper.cdnhost}}/assets/js/nav_liuxue_search.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/guanggao_slider.js"></script>
 </html>
