--- a/views/widget/xSlider/guanggao_slider.html
+++ b/views/widget/xSlider/guanggao_slider.html
@@ -5,7 +5,7 @@
 				{% if picitem.setting.length > 3 %}
 					<div class="home-guanggao swiper-wrapper" style="overflow:hidden;margin-right:-20px;height:120px;">
 					{% for ad_pic in picitem.setting %}
-						<div class="swiper-slide">
+						<div class="swiper-slide" style="width:386px;">
 							<a rel="nofollow" data-pid="{{ad_pic.pid}}" data-seat="{{ad_seat_index}}"  href="{{ad_pic.linkurl}}" target="_blank">
 								<img src='{{ad_pic.imageurl}}' alt='{{picitem.alt}}' style="width:386px;height:120px"/>
 							</a>
