广告图id名以xc开头不用ad

--- a/views/about/activity.html
+++ b/views/about/activity.html
@@ -146,7 +146,7 @@
 {{ new_nav_red.new_nav_red(tdk,helper) }}
 
 <div class="dui-layout-lg clearfix" style="margin: 20px auto;">
-  <div class="dui-layout-lg about-guanggao"  style="height: 130px;background: #dedede;overflow: hidden" id="AD_ACTIVITY_SEAT1">
+  <div class="dui-layout-lg about-guanggao"  style="height: 130px;background: #dedede;overflow: hidden" id="XC_ACTIVITY_SEAT1">
   </div>
   </div>
 <div class="dui-layout-lg clearfix new-activity">
@@ -230,7 +230,7 @@
 
 {% include "widget/new_footer/new_footer.html" %}
 {% import "widget/new_slide/new_slide.html" as  slide %}
-{{slide.leyu_slide("AD_ACTIVITY_SEAT10",helper) }}
+{{slide.leyu_slide("XC_ACTIVITY_SEAT10",helper) }}
 </body>
 <!--<script src="{{helper.cdnhost}}/assets/js/common.js"></script>-->
 <script src="{{helper.cdnhost}}/assets/js/xSlider-4.15.js" ></script>
