--- a/views/adviser_photo_p.html
+++ b/views/adviser_photo_p.html
@@ -107,7 +107,7 @@
 </div>
 {% if userinfo.adviser_type==1 %}
 {% import "widget/new_slide/new_slide3.html" as  slide %}
-{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",userinfo,login_info,helper) }}
+{{slide.leyu_slide("XC_"+tdk.pagekey+"_SEAT10",userinfo,login_info,helper) }}
 {% elseif userinfo.adviser_type==2   %}
 {% import "widget/new_slide_yimin/new_slide3.html" as  slide %}
 {{slide.leyu_slide(userinfo,login_info,helper) }}
