--- a/views/counsellor_set.html
+++ b/views/counsellor_set.html
@@ -69,7 +69,7 @@
 {% import "widget/nav_seventh/nav_seventh.html" as nav_seventh %}
 {{ nav_seventh.nav_seventh(route,tdk.cityid,helper) }}
 
-<div class="dui-layout-lg clearfix list-h" style="margin-top: 20px;" id="AD_CANZAN_CENTER_ACOUNT_SEAT1"></div>
+<div class="dui-layout-lg clearfix list-h" style="margin-top: 20px;" id="XC_CANZAN_CENTER_ACOUNT_SEAT1"></div>
 
 <div class="dui-layout-lg clearfix">
   <div class="dui-layout-silde right">
@@ -121,7 +121,7 @@
 
 {% include "widget/new_footer/new_footer.html" %}
 {% import "widget/new_slide/new_slide.html" as  slide %}
-{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",helper) }}
+{{slide.leyu_slide("XC_"+tdk.pagekey+"_SEAT10",helper) }}
 
 <script>
   $(document).ready(function () {
