--- a/views/edit_case.html
+++ b/views/edit_case.html
@@ -17,7 +17,7 @@
 	{{nav_seventh.nav_seventh("#",tdk.cityid,helper)}}
 	<div class="dui-layout-lg clearfix" style="margin-top: 20px;">
 	<!-- ==广告1== -->
-	<div class="rel-case-map" id="AD_ADVISOR_CENTER_CASEEDIT_SEAT1">
+	<div class="rel-case-map" id="XC_ADVISOR_CENTER_CASEEDIT_SEAT1">
 	</div>
 	</div>
 	<div class="dui-layout-lg clearfix dui-layout-padding" >
@@ -285,7 +285,7 @@
   </div>
     {% include "widget/new_footer/new_footer.html" %}
     {% import "widget/new_slide/new_slide.html" as  slide %}
-    {{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",helper) }}
+    {{slide.leyu_slide("XC_"+tdk.pagekey+"_SEAT10",helper) }}
   <script>
     var login_ss = null; //获取用户信息
     if($.cookie('login_ss') != undefined){
