--- a/views/login/register.html
+++ b/views/login/register.html
@@ -101,7 +101,7 @@
           </div>
 
         </div>
-        <div class="register_r" id="AD_REGISTER_SEAT1"></div>
+        <div class="register_r" id="XC_REGISTER_SEAT1"></div>
         <!--<div class="register_r">
           <img src="{{helper.cdnhost}}/assets/img/r_reg.png" alt=""/>
         </div>-->
