--- a/views/about/about.html
+++ b/views/about/about.html
@@ -22,7 +22,7 @@
 {{ common_nav.common_nav(tdk,helper) }}
 
 <div class="dui-layout-lg clearfix" style="margin: 20px auto;">
-  <div class="dui-layout-lg about-guanggao"  style="height: 360px;background: #dedede;overflow: hidden" id="AD_PROFILE_SEAT1">
+  <div class="dui-layout-lg about-guanggao"  style="height: 360px;background: #dedede;overflow: hidden" id="XC_PROFILE_SEAT1">
 </div>
 <div style="margin:20px 0">
   {% include "widget/nav_tenth/nav_tenth.html" %}
@@ -68,7 +68,7 @@
 
 {% include "widget/new_footer/common_footer.html" %}
 {% import "widget/new_slide/new_slide.html" as  slide %}
-{{slide.leyu_slide("AD_PROFILE_SEAT10",helper) }}
+{{slide.leyu_slide("XC_PROFILE_SEAT10",helper) }}
 <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
 <!--<script src="{{helper.cdnhost}}/assets/js/common.js" ></script>-->
