--- a/views/about/canzan.html
+++ b/views/about/canzan.html
@@ -57,7 +57,7 @@
 
 {% include "widget/new_footer/new_footer.html" %}
 {% import "widget/new_slide/new_slide.html" as  slide %}
-{{slide.leyu_slide("AD_COUNSELLER_SEAT10",helper) }}
+{{slide.leyu_slide("XC_COUNSELLER_SEAT10",helper) }}
 </body>
 <script>
   var AD_PAGE_NAME = "COUNSELLER"; //设置页面对应的名字
