--- a/views/about/contact.html
+++ b/views/about/contact.html
@@ -175,7 +175,7 @@
 
 {% include "widget/new_footer/common_footer.html" %}
 {% import "widget/new_slide/new_slide.html" as  slide %}
-{{slide.leyu_slide("AD_CONTACT_SEAT10",helper) }}
+{{slide.leyu_slide("XC_CONTACT_SEAT10",helper) }}
 <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
 <!--<script src="{{helper.cdnhost}}/assets/js/common.js"></script>-->
