--- a/views/about/cooperation.html
+++ b/views/about/cooperation.html
@@ -198,7 +198,7 @@
 </div>
 {% include "widget/new_footer/common_footer.html" %}
 {% import "widget/new_slide/new_slide.html" as  slide %}
-{{slide.leyu_slide("AD_COOPERATION_SEAT10",helper) }}
+{{slide.leyu_slide("XC_COOPERATION_SEAT10",helper) }}
 <script src="{{helper.cdnhost}}/assets/js/xSlider-4.15.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
 <!--<script src="{{helper.cdnhost}}/assets/js/common.js" ></script>-->
