--- a/views/about/culture.html
+++ b/views/about/culture.html
@@ -47,7 +47,7 @@
 </div>
 {% include "widget/new_footer/common_footer.html" %}
 {% import "widget/new_slide/new_slide.html" as  slide %}
-{{slide.leyu_slide("AD_CULTURE_SEAT10",helper) }}
+{{slide.leyu_slide("XC_CULTURE_SEAT10",helper) }}
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
