--- a/views/act_form.html
+++ b/views/act_form.html
@@ -328,7 +328,7 @@
       <a target="_blank" href="http://www.jjl.cn/zt/zhaopin/employment.html"><div class="act_form_diye"></div></a>
     </div>
 {% import "widget/new_slide/new_slide.html" as  slide %}
-{{slide.leyu_slide("AD_FEEDBACK_SEAT10",helper) }}
+{{slide.leyu_slide("XC_FEEDBACK_SEAT10",helper) }}
 <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
 <!--<script src="{{helper.cdnhost}}/assets/js/common.js" ></script>-->
