--- a/views/center_article_detail.html
+++ b/views/center_article_detail.html
@@ -98,7 +98,7 @@
 </div>
   {% if userinfo.adviser_type==1 %}
   {% import "widget/new_slide/new_slide2.html" as  slide %}
-  {{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",helper) }}
+  {{slide.leyu_slide("XC_"+tdk.pagekey+"_SEAT10",helper) }}
   {% elseif  userinfo.adviser_type==2 %}
   {% import "widget/new_slide_yimin/new_slide2.html" as  slide %}
   {{slide.leyu_slide(helper) }}
