--- a/views/center_comment.html
+++ b/views/center_comment.html
@@ -111,11 +111,11 @@
 {% include "widget/new_footer/common_footer.html" %}
 {% if userinfo.usertype == 1 %}
 {% import "widget/new_slide/new_slide.html" as  slide %}
-{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",helper) }}
+{{slide.leyu_slide("XC_"+tdk.pagekey+"_SEAT10",helper) }}
 {% elseif userinfo.usertype == 2 %}
 {% if userinfo.adviser_type==1 %}
 {% import "widget/new_slide/new_slide2.html" as  slide %}
-{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",helper) }}
+{{slide.leyu_slide("XC_"+tdk.pagekey+"_SEAT10",helper) }}
 {% elseif  userinfo.adviser_type==2 %}
 {% import "widget/new_slide_yimin/new_slide2.html" as  slide %}
 {{slide.leyu_slide(helper) }}
