--- a/views/community_index.html
+++ b/views/community_index.html
@@ -135,7 +135,7 @@
 {% include "widget/top/top.html" %}
 {% import "widget/nav_seventh/nav_seventh.html" as nav_seventh %}
 {{ nav_seventh.nav_seventh(route,tdk.cityid,helper) }}
-<div class="dui-layout-lg clearfix list-h" style="margin-top: 20px;" id="AD_COMMUNITY_INDEX_SEAT2"></div>
+<div class="dui-layout-lg clearfix list-h" style="margin-top: 20px;" id="XC_COMMUNITY_INDEX_SEAT2"></div>
 <div class="dui-layout-lg clearfix">
   <div class="dui-layout-con left">
     <div class="clearfix" style="border: 1px solid #eee;margin-top: 20px;background: #fff">
@@ -558,7 +558,7 @@
 
 {% include "widget/new_footer/new_footer.html" %}
 {% import "widget/new_slide/new_slide.html" as  slide %}
-{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",helper) }}
+{{slide.leyu_slide("XC_"+tdk.pagekey+"_SEAT10",helper) }}
 <script>
   var login_ss = null; 
   if($.cookie('login_ss') != undefined){
