--- a/views/edit_article_yimin.html
+++ b/views/edit_article_yimin.html
@@ -309,7 +309,7 @@
 	</div>
   {% include "widget/new_footer/common_footer.html" %}
   {% import "widget/new_slide/new_slide.html" as  slide %}
-  {{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",helper) }}
+  {{slide.leyu_slide("XC_"+tdk.pagekey+"_SEAT10",helper) }}
   <script>
     var login_ss = null; //获取用户信息
     if($.cookie('login_ss') != undefined){
