--- a/views/index.html
+++ b/views/index.html
@@ -367,7 +367,7 @@
 {% include "widget/online_evaluation/online_consultation.html" %}
 {% include "widget/new_footer/new_footer.html" %}
 {% import "widget/new_slide/new_slide.html" as  slide %}
-{{slide.leyu_slide("AD_HOME_SEAT10",helper) }}
+{{slide.leyu_slide("XC_HOME_SEAT10",helper) }}
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
