--- a/views/login/forget.html
+++ b/views/login/forget.html
@@ -110,7 +110,7 @@
         </div>-->
 
       </div>
-      <div class="register_r" id="AD_FORGETPWD_SEAT1"></div>
+      <div class="register_r" id="XC_FORGETPWD_SEAT1"></div>
       <!--<div class="register_r">
         <img src="{{helper.cdnhost}}/assets/img/r_reg.png" alt=""/>
       </div>-->
