--- a/views/user_follow.html
+++ b/views/user_follow.html
@@ -101,7 +101,7 @@
 </div>
 {% include "widget/new_footer/common_footer.html" %}
 {% import "widget/new_slide/new_slide.html" as  slide %}
-{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",helper) }}
+{{slide.leyu_slide("XC_"+tdk.pagekey+"_SEAT10",helper) }}
 <script>
     var login_ss = null; 
     if($.cookie('login_ss') != undefined){
